--- a/company/public/index.html
+++ b/company/public/index.html
@@ -32,7 +32,10 @@
     //     console.log(document.documentElement.style.fontSize)
     // }
       window.config={
-        host:'https://mp.zjzct.cn'
+        //host:'https://mp.zjzct.cn'
+        host:'http://192.168.43.71:8081',
+        downLoadUrl:'https://mp.zjzct.cn/download/contract.docx',
+        adminHost:'http://192.168.43.71:8888'
       }
     </script>
   </head>
